--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "^8.44.0",
-    "eslint-config-next": "13.4.9",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-next": "^0.0.0",
     "husky": "^8.0.3",
     "typescript": "4.9.5"
   }
