--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint-config-prettier", "plugin:json/recommended", "next"],
+  "extends": ["eslint-config-prettier", "plugin:json/recommended", "next", "plugin:react/recommended"],
   "overrides": [
     {
       "env": {
