--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "typescript": "4.9.5"
   }
